flux/infrastructure/traefik/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: system-addon
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: traefik-system-addon
    app.kubernetes.io/name: traefik
  ports:
  - name: traefik
    port: 8080
    targetPort: 8080
    protocol: TCP
